# embedded-test-example

./: Cargo.toml  build.rs  memory.x
.cargo/: config.toml
src/: main.rs
tests/: example_test.rs
